--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 		<div class="row">
 			<div class="col-sm-12">
-				<img src="images\sunset_dock_horizontal.jpg" class="img-responsive" alt="dock at sunset">
+				<img src="images\sunset_dock_horizontal.jpg" class="img-responsive center-block" alt="dock at sunset">
 			</div>
 		</div>
 
@@ -38,15 +38,15 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-sm-4">
-				<img src="images\striper_horizontal_water.jpg" alt="striped bass">
+				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
 				<h3 class="text-center">COL 1</h3>
 			</div>
 			<div class="col-xs-12 col-sm-4">
-				<img src="images\striper_horizontal_water.jpg" alt="striped bass">
+				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
 				<h3 class="text-center">COL 2</h3>
 			</div>
 			<div class="col-xs-12 col-sm-4">
-				<img src="images\striper_horizontal_water.jpg" alt="striped bass">
+				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
 				<h3 class="text-center">COL 3</h3>
 			</div>
 		</div>
