--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<div class="col-xs-2 col-sm-2"><img src="images\fly-reel.png" alt="fly reel logo">
 			</div>
 			<div class="col-xs-10 col-sm-10">
-				<h1 class="text-right">BMADDEN</h1>
-				<p class="text-right"> FLY FISHING</p>
+				<h1 class="text-right">BRIAN MADDEN</h1>
+				<p class="text-right">FLY FISHING PHOTOGRAPHY</p>
 			</div>
 		</div>
 
@@ -26,7 +26,7 @@
 
 		<div class="row">
 			<div class="col-sm-12">
-				<img src="images\sunset_dock_horizontal.jpg" class="img-responsive center-block" alt="dock at sunset">
+				<img src="images\sunset_dock_horizontal.jpg" class="img-responsive center-block" alt="Nonquitt dock at sunset">
 			</div>
 		</div>
 
@@ -39,15 +39,18 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-4">
 				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
-				<h3 class="text-center">COL 1</h3>
+				<h3 class="text-center">Fish</h3>
+				<p class="text-center"><a href="https://github.com/msaxatilis/Project-2---Portfolio-Site">Link to Project</a></p>
 			</div>
 			<div class="col-xs-12 col-sm-4">
-				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
-				<h3 class="text-center">COL 2</h3>
+				<img src="images\Nonquitt_rock_300_200.jpg" class="img-responsive center-block" alt="Nonquitt Rock">
+				<h3 class="text-center">Places</h3>
+				<p class="text-center"><a href="https://github.com/msaxatilis/Project-2---Portfolio-Site">Link to Project</a></p>
 			</div>
 			<div class="col-xs-12 col-sm-4">
-				<img src="images\striper_horizontal_water.jpg" class="img-responsive center-block" alt="striped bass">
-				<h3 class="text-center">COL 3</h3>
+				<img src="images\Deceiver_300_200.jpg" class="img-responsive center-block" alt="Deceiver fly">
+				<h3 class="text-center">Flies</h3>
+				<p class="text-center"><a href="https://github.com/msaxatilis/Project-2---Portfolio-Site">Link to Project</a></p>
 			</div>
 		</div>
 	</div>
